core/tests/ui/invalid_nan.stderr
error[E0080]: evaluation of constant value failed
 --> src/time_temperature_curve/impl_polyline_const.rs
  |
  |                 panic!("InvalidValue: NaN or infinite value in polyline");
  |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the evaluated program panicked at 'InvalidValue: NaN or infinite value in polyline', $DIR/src/time_temperature_curve/impl_polyline_const.rs:17:17
  |
note: inside `ImplPolylineConst::<2>::from_array`
 --> src/time_temperature_curve/impl_polyline_const.rs
  |
  |                 panic!("InvalidValue: NaN or infinite value in polyline");
  |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: inside `_INVALID_NAN`
 --> tests/ui/invalid_nan.rs:3:44
  |
3 |   const _INVALID_NAN: ImplPolylineConst<2> = ImplPolylineConst::from_array([
  |  ____________________________________________^
4 | |     (0.0, f64::NAN),
5 | |     (1.0, 2.0),
6 | | ]);
  | |__^
  = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `panic` (in Nightly builds, run with -Z macro-backtrace for more info)
